# Space-Sim

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Core.h  Engine.cpp  Engine.h  Shapes.cpp  Shapes.h  Space Sim.cpp  Space Sim.sln  Space Sim.vcxproj  Space Sim.vcxproj.filters  SpaceUtils.h  Window.cpp  Window.h  imgui.ini
Source/Application/: CMakeLists.txt  Nyx.cpp  Space Sim.cpp
Source/Application/Constants/: Constants.cpp  Constants.h
Source/Application/Core/: Core.h
Source/Application/Core/Camera/: Camera.cpp  Camera.h
Source/Application/Core/Definitions/: BitwiseOperator.h  Definitions.h  GlmNames.h  Singleton.h  StdNames.h
Source/Application/Core/Engine/: Engine.cpp  Engine.h
Source/Application/Core/Input/: Input.cpp  Input.h  InputDispatcher.cpp  InputDispatcher.h  InputEvent.h  InputQueue.h
Source/Application/Core/Renderer/: Renderer.h
Source/Application/Core/Scene/: Scene.cpp  Scene.h
Source/Application/Core/SceneManager/: SceneManager.cpp  SceneManager.h
Source/Application/Entities/Camera/: Camera.h
Source/Application/Entities/Sphere/: Sphere.cpp  Sphere.h
Source/Application/Resource/Buffers/: EBO.h  VAO.h  VBO.h
Source/Application/Resource/Camera/: Camera.cpp  Camera.h
Source/Application/Resource/Components/: Components.h
Source/Application/Resource/Entities/: Entity.h
Source/Application/Resource/EntityManager/: EntityManager.h
Source/Application/Resource/Physics/: Acceleration.h  Meter.h  Physics.h  Velocity.h
Source/Application/Resource/ShaderProgram/: ShaderProgram.h
Source/Application/Window/: Window.cpp  Window.h
(+83 files in other folders)
